<resources>
    <string name="app_name">Contact App</string>
    <string name="add_contact">Add New Contact</string>
    <string name="blah_blah_blah">Blah Blah Blah</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="add_contact_picture">Add contact picture</string>
    <string name="phone_num">Phone Number</string>
    <string name="textview">TextView</string>
    <string name="contact_image">Contact Image</string>
    <string name="call_contact">Call Contact</string>
    <string name="email_contact">Email Contact</string>
    <string name="save">Save</string>
    <string name="supporting_text">your changes have not been saved</string>
    <string name="discard">Discard</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="cancle">Cancle</string>
    <string name="change_photo">Change Photo</string>
    <string name="search">Search</string>
</resources>