<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateContactFragment">

    <ImageView
        android:id="@+id/addPhoto_img"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/insert_image"
        android:contentDescription="@string/add_contact_picture" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="4dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:layout_marginBottom="@dimen/base_margin"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="4dp" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:layout_marginBottom="@dimen/base_margin"
        android:ems="10"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="4dp"
        tools:hint="@string/phone_num" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="4dp" />

</LinearLayout>