<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactDetailsFragment">


    <ImageView
        android:id="@+id/contactImg"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="@dimen/base_margin"
        android:contentDescription="@string/contact_image"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:text="@string/textview"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_call_24"
            android:contentDescription="@string/call_contact" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/email_contact" />
    </LinearLayout>

    <TextView
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:text="@string/textview"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/name3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:text="@string/textview"
        android:textSize="32sp" />

</LinearLayout>